@@ -1,3 +1,9 @@
+*** 20001004_1 by lusky
+changed ltrace to be consistant with trace for non-opers
+mode channel +e now returns an error to non-chanops
+unauth connection notices now include servername/port (jdc)
+
+
 *** 20000917_1 by lusky
 changed "juping locally" to "locally juping" (gp)
 typo in stats z display (gp)
